plugins {
    id 'org.springframework.boot' version '3.2.5' apply false
    id 'io.spring.dependency-management' version '1.0.14.RELEASE' apply false
    id 'org.asciidoctor.jvm.convert' version '3.3.2' apply false
    id 'java'
}

allprojects {
    group = 'se.sowl'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        implementation 'mysql:mysql-connector-java:8.0.29'
        implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
        annotationProcessor 'org.projectlombok:lombok'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.7.1'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    if (project.name != 'devly-batch') {
        tasks.named('bootJar') {
            enabled = false
        }
        tasks.named('jar') {
            enabled = true
        }
    }

    tasks.named('jar') {
        enabled = true
    }

    tasks.register("prepareKotlinBuildScriptModel"){}

    test {
        useJUnitPlatform()
    }

    ext {
        set('springCloudVersion', "2023.0.0")
        set('queryDslVersion', "5.0.0")
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

}

jar {
    enabled = false
}
